--- a/url-shortner-app/src/public/pages/index.html
+++ b/url-shortner-app/src/public/pages/index.html
@@ -6,13 +6,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 
-    <title>url-shortner-app demo</title>
+    <title>URL Shortener App</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            gap:16px;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f3f4f6;
+        }
+
+        .container {
+            text-align: center;
+        }
+
+        h1 {
+            color: #333;
+            margin-bottom: 20px;
+
+        }
+
+        input[type="text"] {
+            padding: 10px;
+            width: 300px;
+            margin: 5px;
+        }
+
+        input[type="submit"] {
+            padding: 10px 20px;
+            background-color: #4caf50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+
+        .result {
+            margin-top: 20px;
+            font-weight: bold;
+            color: #333;
+        }
+    </style>
 </head>
 
 <body>
-    <main>
-        <h1>url-shortner-app demo</h1>
-    </main>
+    <div class="container">
+        <h1>URL Shortener</h1>
+        <form id="urlForm">
+            <input type="text" id="codeInput" placeholder="Identifier code">
+            <br>
+            <input type="text" id="urlInput" placeholder="Enter URL (e.g., https://example.com)">
+            <br>
+            <input type="submit" value="Shorten URL">
+        </form>
+        <div class="result" id="result"></div>
+    </div>
+
+    <script src="/assets/js/main.js" type="application/javascript"></script>
 </body>
 
 </html>
