--- a/url-shortner-app/src/public/pages/index.html
+++ b/url-shortner-app/src/public/pages/index.html
@@ -5,66 +5,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
-
   <title>URL Shortener App</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      gap: 16px;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background-color: #f3f4f6;
-    }
 
-    .container {
-      text-align: center;
-    }
 
-    h1 {
-      color: #333;
-      margin: 0;
-    }
-
-    .mb {
-      margin-bottom: 16px;
-    }
-
-    input[type="text"] {
-      padding: 10px;
-      width: 300px;
-      margin: 5px;
-    }
-
-    input[type="submit"] {
-      padding: 10px 20px;
-      background-color: #4caf50;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-
-    input[type="submit"]:hover {
-      filter: brightness(1.2);
-    }
-
-    .result {
-      margin-top: 20px;
-      font-weight: bold;
-      color: #333;
-    }
-  </style>
+  <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 
 <body>
   <div class="container">
     <div class="mb">
       <h1>URL Shortener</h1>
-      <a href="/api/docs" target="_blank">
-        <button>Open API Documentation</button>
+      <a id="docsButtonWrapper" href="/api/docs" target="_blank">
+        <button id="docsButton">?</button>
       </a>
     </div>
 
