style: update CSS and add docs button

--- a/url-shortner-app/src/public/pages/index.html
+++ b/url-shortner-app/src/public/pages/index.html
@@ -16,7 +16,7 @@
     <div class="mb">
       <h1>URL Shortener</h1>
       <a id="docsButtonWrapper" href="/api/docs" target="_blank">
-        <button id="docsButton">?</button>
+        <button id="docsButton"></button>
       </a>
     </div>
 
