feat: add GitHub button and documentation link
  Add GitHub button and a documentation link to the landing page.

--- a/url-shortner-app/src/public/pages/index.html
+++ b/url-shortner-app/src/public/pages/index.html
@@ -15,9 +15,6 @@
   <div class="container">
     <div class="mb">
       <h1>URL Shortener</h1>
-      <a id="docsButtonWrapper" href="/api/docs" target="_blank">
-        <button id="docsButton"></button>
-      </a>
     </div>
 
     <form id="urlForm">
@@ -32,6 +29,12 @@
 
     <div class="result" id="result"></div>
 
+    <a id="docsButtonWrapper" href="/api/docs" target="_blank">
+      <button id="docsButton"></button>
+    </a>
+    <a id="githubButtonWrapper" href="https://github.com/andersonbosa/url-shortner" target="_blank">
+      <img src="/assets/github-original-wordmark.svg" width="32" height="32" />
+    </a>
   </div>
 
   <script src="/assets/js/main.js" type="application/javascript"></script>
