feat: create links controller
Implement a controller for managing short links, providing CRUD operations.

--- a/app/src/public/pages/index.html
+++ b/app/src/public/pages/index.html
@@ -24,15 +24,15 @@
         <input type="text" id="urlInput" placeholder="Enter URL (e.g., https://example.com)">
         <br>
       </div>
-      <input type="submit" value="Shorten URL">
+      <input type="submit" value="Shorten URL" class="btn-expand">
     </form>
 
     <div class="result" id="result"></div>
 
-    <a id="docsButtonWrapper" href="/api/docs" target="_blank">
+    <a class="btn-expand" id="docsButtonWrapper" href="/api/docs" target="_blank">
       <button id="docsButton"></button>
     </a>
-    <a id="githubButtonWrapper" href="https://github.com/andersonbosa/url-shortner" target="_blank">
+    <a class="btn-expand" id="githubButtonWrapper" href="https://github.com/andersonbosa/url-shortner" target="_blank">
       <img src="/assets/github-original-wordmark.svg" width="32" height="32" />
     </a>
   </div>
