feat: add optional code field to URL shortening form and display shortened URL as link
This commit introduces an optional code field to the URL shortening form, allowing users to specify a custom identifier code for their shortened URL. Additionally, it enhances the display of the shortened URL by rendering it as a clickable link, improving user experience and readability.

--- a/app/src/public/pages/index.html
+++ b/app/src/public/pages/index.html
@@ -19,7 +19,7 @@
 
     <form id="urlForm">
       <div class="mb">
-        <input type="text" id="codeInput" placeholder="Identifier code">
+        <input type="text" id="codeInput" placeholder="Identifier code (optional)">
         <br>
         <input type="text" id="urlInput" placeholder="Enter URL (e.g., https://example.com)">
         <br>
@@ -27,7 +27,7 @@
       <input type="submit" value="Shorten URL" class="btn-expand">
     </form>
 
-    <div class="result" id="result"></div>
+    <div class="result invisible" id="result" ></div>
 
     <a class="btn-expand" id="docsButtonWrapper" href="/api/docs" target="_blank">
       <button id="docsButton"></button>
